--- a/_daily/2023-08-14.md
+++ b/_daily/2023-08-14.md
@@ -1,9 +1,22 @@
-test jest najważniejszy. 
-sdasdasdas
-a
-sd
-asd
-a
-sd
-as
-d
+---
+layout: daily
+category: daily
+date: 2023-08-14
+tags: 
+published: true
+---
+
+# 2023-08-14
+
+## test jest najważniejszy.  
+Cokolwiek by o Nim nie mówić, istoty Tao nie da się opisać.
+Można nadać Mu nazwę, ale to nie będzie właściwa nazwa.
+Nicość to początek Nieba i Ziemi.
+Byt zaś jest Matką wszystkiego stworzenia.
+Poprzez Nicości można poznać jak subtelne jest Tao.
+Dzięki Bytowi można ujrzeć Jego bezmiar.
+Oba jednocześnie się wyłoniły,
+a potem odrębne przyjęły nazwy.
+Pozostały jednak równie tajemnicze.
+Tajemnicze a jeszcze bardziej tajemnicze się stają.
+Z nich się rodzi ogrom i subtelność.
